--- a/frontend_app/src/app/project-edit-form/project-edit-form.component.html
+++ b/frontend_app/src/app/project-edit-form/project-edit-form.component.html
@@ -11,17 +11,17 @@
         <input type="text" id="description" formControlName="description" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">
-        <label for="dateStart" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
-        <input type="date" id="dateStart" formControlName="startDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <label for="startDatet" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
+        <input type="date" id="startDate" formControlName="startDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">
-        <label for="dateEnd" class="block text-gray-700 font-bold mb-2">Fecha de Fin:</label>
-        <input type="date" id="dateEnd" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+        <label for="endDate" class="block text-gray-700 font-bold mb-2">Fecha de Fin:</label>
+        <input type="date" id="endDate" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
       </div>
       <div class="mb-4">        
-        <label for="Club" class="block text-gray-700 font-bold mb-2">Club:</label>          
-          <select formControlName="Club" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
-            <option *ngFor="let club of clubsData" [value]="club.Nombre">{{ club.Nombre }}</option>
+        <label for="idClub" class="block text-gray-700 font-bold mb-2">Club:</label>          
+          <select formControlName="idClub" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
+            <option *ngFor="let club of clubsData" [value]="club.id">{{ club.Nombre }}</option>
           </select>
       </div>
     </div>
