--- a/frontend_app/src/app/club-list/club-list.component.html
+++ b/frontend_app/src/app/club-list/club-list.component.html
@@ -1,42 +1,26 @@
-<app-container class="container">
+<app-container>
     <h1 class="font-bold text-3xl pb-10 text-center">Clubes</h1>
-    <table mat-table [dataSource]="field" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Codigo</th>
-        <td mat-cell *matCellDef="let club">{{ club.id }}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nombre del club</th>
-        <td mat-cell *matCellDef="let club">{{ club.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Descripción</th>
-        <td mat-cell *matCellDef="let club">{{ club.description }}</td>
-      </ng-container>
-      <ng-container matColumnDef="cardResponsible">
-        <th mat-header-cell *matHeaderCellDef>Cedula responsable</th>
-        <td mat-cell *matCellDef="let club">{{ club.cardResponsible }}</td>
-      </ng-container>
+    <ng-scrollbar class="heightMaxScrollbar">
+      <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
-        <td mat-cell *matCellDef="let club">
-          <button mat-icon-button color="primary" (click)="openForm(club)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="delete(club.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row"> 
+              <button mat-icon-button color="primary" (click)="openForm(row)">
+                  <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="accent" (click)="delete(row.id)">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
       </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <app-paginator
-      fxLayout
-      fxLayoutAlign="end center"
-      [lenght]="totalRecords"
-      (onChangePage)="changePage($event)">
-    </app-paginator>
-  </app-container>
-  
+  </app-table>
+  </ng-scrollbar>
+  <app-paginator
+  fxLayout
+  fxLayoutAlign="end center"
+  [lenght]="totalRecords"
+  (onChangePage)="changePage($event)"
+  >
+  </app-paginator>
+ </app-container>
+
