--- a/frontend_app/src/app/members-list/members-list.component.html
+++ b/frontend_app/src/app/members-list/members-list.component.html
@@ -1,52 +1,25 @@
-<app-container class="container">
+<app-container>
     <h1 class="font-bold text-3xl pb-10 text-center">Miembros</h1>
     <ng-scrollbar class="heightMaxScrollbar">
-      <table mat-table [dataSource]="data" class="mat-elevation-z8">
-        <ng-container matColumnDef="card">
-          <th mat-header-cell *matHeaderCellDef>Cedula</th>
-          <td mat-cell *matCellDef="let member">{{ member.card }}</td>
-        </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Nombre</th>
-          <td mat-cell *matCellDef="let member">{{ member.name }}</td>
-        </ng-container>
-        <ng-container matColumnDef="lastName">
-          <th mat-header-cell *matHeaderCellDef>Apellido</th>
-          <td mat-cell *matCellDef="let member">{{ member.lastName }}</td>
-        </ng-container>
-        <ng-container matColumnDef="semester">
-          <th mat-header-cell *matHeaderCellDef>Semestre</th>
-          <td mat-cell *matCellDef="let member">{{ member.semester }}</td>
-        </ng-container>
-        <ng-container matColumnDef="major">
-          <th mat-header-cell *matHeaderCellDef>Carrera</th>
-          <td mat-cell *matCellDef="let member">{{ member.major }}</td>
-        </ng-container>
-        <ng-container matColumnDef="rol">
-          <th mat-header-cell *matHeaderCellDef>Rol</th>
-          <td mat-cell *matCellDef="let member">{{ member.rol }}</td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let member">
-            <button mat-icon-button color="primary" (click)="openForm(member)">
-              <mat-icon>edit</mat-icon>
+    <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row"> 
+            <button mat-icon-button color="primary" (click)="openForm(row)">
+                <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="delete(member.id)">
-              <mat-icon>delete</mat-icon>
+            <button mat-icon-button color="accent" (click)="delete(row.id)">
+                <mat-icon>delete</mat-icon>
             </button>
-          </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </ng-scrollbar>
-    <app-paginator
-      fxLayout
-      fxLayoutAlign="end center"
-      [lenght]="totalRecords"
-      (onChangePage)="changePage($event)">
-    </app-paginator>
-  </app-container>
-  
+        </td>
+    </ng-container>
+</app-table>
+</ng-scrollbar>
+<app-paginator
+fxLayout
+fxLayoutAlign="end center"
+[lenght]="totalRecords"
+(onChangePage)="changePage($event)"
+>
+</app-paginator>
+</app-container>
