--- a/frontend_app/src/app/project-list/project-list.component.html
+++ b/frontend_app/src/app/project-list/project-list.component.html
@@ -1,52 +1,25 @@
-<app-container class="container">
+<app-container>
     <h1 class="font-bold text-3xl pb-10 text-center">Proyectos</h1>
-    <ng-scrollbar class="heightMaxScrollbar">
-      <table mat-table [dataSource]="data" class="mat-elevation-z8">
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>Codigo</th>
-          <td mat-cell *matCellDef="let project">{{ project.id }}</td>
-        </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Nombre</th>
-          <td mat-cell *matCellDef="let project">{{ project.name }}</td>
-        </ng-container>
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Descripcion</th>
-          <td mat-cell *matCellDef="let project">{{ project.description }}</td>
-        </ng-container>
-        <ng-container matColumnDef="startDate">
-          <th mat-header-cell *matHeaderCellDef>Fecha Inicio</th>
-          <td mat-cell *matCellDef="let project">{{ project.startDate }}</td>
-        </ng-container>
-        <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef>Fecha Fin</th>
-          <td mat-cell *matCellDef="let project">{{ project.endDate }}</td>
-        </ng-container>
-        <ng-container matColumnDef="idClub">
-          <th mat-header-cell *matHeaderCellDef>Club</th>
-          <td mat-cell *matCellDef="let project">{{ project.idClub }}</td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let project">
-            <button mat-icon-button color="primary" (click)="openForm(project)">
-              <mat-icon>edit</mat-icon>
+  <ng-scrollbar class="heightMaxScrollbar">
+    <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row"> 
+            <button mat-icon-button color="primary" (click)="openForm(row)">
+                <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="delete(project.id)">
-              <mat-icon>delete</mat-icon>
+            <button mat-icon-button color="accent" (click)="delete(row.id)">
+                <mat-icon>delete</mat-icon>
             </button>
-          </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </ng-scrollbar>
-    <app-paginator
-      fxLayout
-      fxLayoutAlign="end center"
-      [lenght]="totalRecords"
-      (onChangePage)="changePage($event)">
-    </app-paginator>
-  </app-container>
-  
+        </td>
+    </ng-container>
+</app-table>
+</ng-scrollbar>
+<app-paginator
+fxLayout
+fxLayoutAlign="end center"
+[lenght]="totalRecords"
+(onChangePage)="changePage($event)"
+>
+</app-paginator>
+    </app-container>
