--- a/frontend_app/src/app/speakers-list/speakers-list.component.html
+++ b/frontend_app/src/app/speakers-list/speakers-list.component.html
@@ -1,51 +1,24 @@
 <app-container>
   <h1 class="font-bold text-3xl pb-10 text-center">Ponentes</h1>
   <ng-scrollbar class="heightMaxScrollbar">
-    <table mat-table [dataSource]="data" class="mat-elevation-z8">
-      <ng-container matColumnDef="card">
-        <th mat-header-cell *matHeaderCellDef>Cédula</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.card }}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef>Apellido</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.lastName }}</td>
-      </ng-container>
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Correo</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.email }}</td>
-      </ng-container>
-      <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef>Teléfono</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.phone }}</td>
-      </ng-container>
-      <ng-container matColumnDef="topic">
-        <th mat-header-cell *matHeaderCellDef>Tema</th>
-        <td mat-cell *matCellDef="let speaker">{{ speaker.topic }}</td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
-        <td mat-cell *matCellDef="let speaker">
-          <button mat-icon-button color="primary" (click)="openForm(speaker)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="delete(speaker.card)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </ng-scrollbar>
-  <app-paginator
-    fxLayout
-    fxLayoutAlign="end center"
-    [lenght]="totalRecords"
+      <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row"> 
+            <button mat-icon-button color="primary" (click)="openForm(row)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="accent" (click)="delete(row.card)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+      </app-table>
+    </ng-scrollbar>
+    <app-paginator 
+    fxLayout fxLayoutAlign="end center" 
+    [lenght]="totalRecords" 
     (onChangePage)="changePage($event)">
-  </app-paginator>
-</app-container>
+    </app-paginator>
+  </app-container>
+  
