--- a/frontend_app/src/app/talks-list/talks-list.component.html
+++ b/frontend_app/src/app/talks-list/talks-list.component.html
@@ -1,52 +1,25 @@
 <app-container>
     <h1 class="font-bold text-3xl pb-10 text-center">Charlas</h1>
     <ng-scrollbar class="heightMaxScrollbar">
-      <table mat-table [dataSource]="data" class="mat-elevation-z8">
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>Codigo</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.id }}</td>
-        </ng-container>
-        <ng-container matColumnDef="topic">
-          <th mat-header-cell *matHeaderCellDef>Tema</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.topic }}</td>
-        </ng-container>
-        <ng-container matColumnDef="image">
-          <th mat-header-cell *matHeaderCellDef>Imagen</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.image }}</td>
-        </ng-container>
-        <ng-container matColumnDef="startDate">
-          <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.startDate }}</td>
-        </ng-container>
-        <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef>Fecha de Fin</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.endDate }}</td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Estado</th>
-          <td mat-cell *matCellDef="let talk">{{ talk.status }}</td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let talk">
-            <button mat-icon-button color="primary" (click)="openForm(talk)">
-              <mat-icon>edit</mat-icon>
+    <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row"> 
+            <button mat-icon-button color="primary" (click)="openForm(row)">
+                <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="delete(talk.id)">
-              <mat-icon>delete</mat-icon>
+            <button mat-icon-button color="accent" (click)="delete(row.id)">
+                <mat-icon>delete</mat-icon>
             </button>
-          </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </ng-scrollbar>
-    <app-paginator
-      fxLayout
-      fxLayoutAlign="end center"
-      [lenght]="totalRecords"
-      (onChangePage)="changePage($event)">
-    </app-paginator>
-  </app-container>
-  
+        </td>
+    </ng-container>
+</app-table>
+</ng-scrollbar>
+<app-paginator
+fxLayout
+fxLayoutAlign="end center"
+[lenght]="totalRecords"
+(onChangePage)="changePage($event)"
+>
+</app-paginator>
+    </app-container>
