--- a/frontend_app/src/app/university-list/university-list.component.html
+++ b/frontend_app/src/app/university-list/university-list.component.html
@@ -1,41 +1,25 @@
-<app-container class="container">
-  <h1>Listado de Universidades</h1>
-  <table mat-table [dataSource]="field" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let university">{{ university.id }}</td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let university">{{ university.name }}</td>
-    </ng-container>
-    <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef>Ciudad</th>
-      <td mat-cell *matCellDef="let university">{{ university.city }}</td>
-    </ng-container>
-    <ng-container matColumnDef="province">
-      <th mat-header-cell *matHeaderCellDef>Provincia</th>
-      <td mat-cell *matCellDef="let university">{{ university.province }}</td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let university">
-        <button mat-icon-button color="primary" (click)="openForm(university)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" (click)="delete(university.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <app-paginator
-    fxLayout
-    fxLayoutAlign="end center"
-    [lenght]="totalRecords"
-    (onChangePage)="changePage($event)"
-  ></app-paginator>
-</app-container>
+<app-container>
+  <h1 class="font-bold text-3xl pb-10 text-center">Universidades</h1>
+  <ng-scrollbar class="heightMaxScrollbar">
+      <app-table [data]="data" [metaDataColumns]="MetaDataColumn">
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row"> 
+            <button mat-icon-button color="primary" (click)="openForm(row)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="accent" (click)="delete(row.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+      </app-table>
+    </ng-scrollbar>
+    <app-paginator
+      fxLayout
+      fxLayoutAlign="end center"
+      [lenght]="totalRecords"
+      (onChangePage)="changePage($event)"
+    ></app-paginator>
+  </app-container>
+  
