--- a/frontend_app/src/app/registration-events/registration-events.component.html
+++ b/frontend_app/src/app/registration-events/registration-events.component.html
@@ -1,8 +1,8 @@
 <div class="bg-gray-100 p-4">
-  <form method="POST" id="eventForm" class="max-w-md mx-auto bg-white p-8 rounded shadow-md" [formGroup]="eventos" (ngSubmit)="onSubmit()">
+  <form method="POST" id="eventForm" class="max-w-2xl mx-auto bg-white p-8 rounded shadow-md" [formGroup]="eventos" (ngSubmit)="onSubmit()">
     <h2 class="text-2xl font-bold mb-4 text-center">Registrar Evento</h2>
-    <div class="flex flex-col gap-4">
-      <div class="mb-4">
+    <div class="flex flex-wrap -mx-2">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="name" class="block text-gray-700 font-bold mb-2">Nombre del evento:</label>
         <input type="text" id="name" formControlName="name" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
         <span class="text-red-500 text-sm" *ngIf="eventos.get('name')?.invalid && (eventos.get('name')?.dirty || eventos.get('name')?.touched)">
@@ -10,7 +10,7 @@
         </span>
       </div>
       
-      <div class="mb-4">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="description" class="block text-gray-700 font-bold mb-2">Descripción:</label>
         <textarea id="description" formControlName="description" required rows="3" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500"></textarea>
         <span class="text-red-500 text-sm" *ngIf="eventos.get('description')?.invalid && (eventos.get('description')?.dirty || eventos.get('description')?.touched)">
@@ -18,7 +18,7 @@
         </span>
       </div>
       
-      <div class="mb-4">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="startDate" class="block text-gray-700 font-bold mb-2">Fecha de inicio:</label>
         <input type="date" id="startDate" formControlName="startDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" [min]="minStartDate" (change)="updateEndDateMin()">
         <span class="text-red-500 text-sm" *ngIf="eventos.get('startDate')?.invalid && (eventos.get('startDate')?.dirty || eventos.get('startDate')?.touched)">
@@ -26,7 +26,7 @@
         </span>
       </div>
       
-      <div class="mb-4">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="endDate" class="block text-gray-700 font-bold mb-2">Fecha de fin:</label>
         <input type="date" id="endDate" formControlName="endDate" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" [min]="minEndDate">
         <span class="text-red-500 text-sm" *ngIf="eventos.get('endDate')?.invalid && (eventos.get('endDate')?.dirty || eventos.get('endDate')?.touched)">
@@ -34,7 +34,7 @@
         </span>
       </div>
       
-      <div class="mb-4">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="typeEvent" class="block text-gray-700 font-bold mb-2">Tipo de evento:</label>
         <select id="typeEvent" formControlName="typeEvent" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
           <option value="">Seleccione un tipo</option>
@@ -49,7 +49,7 @@
         </span>
       </div>
       
-      <div class="mb-4">
+      <div class="w-full md:w-1/2 px-2 mb-4">
         <label for="status" class="block text-gray-700 font-bold mb-2">Estado del evento:</label>
         <select id="status" formControlName="status" required class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500">
           <option value="">Seleccione un estado</option>
